Updated the image gallery to no longer be distorted.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,3 +68,10 @@ body{
 
 /* navbar styling */
 
+/* clearfix */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+/*clearfix */
